# BlogToBook

./: .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  deploy.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: docker-publish.yml
app/: main.py
app/api/v1/: exception_handlers.py  exceptions.py
app/api/v1/endpoints/: converter.py
app/api/v1/model/: dto.py  enums.py
app/core/: config.py  exceptions.py
app/services/: conversion_service.py  conversion_tracker.py  converter.py  epub_converter.py  factory.py  pdf_converter.py
app/services/content/: __init__.py  base_extractor.py  base_processor.py  bs4_html_processor.py  trafilatura_extractor.py
app/services/converter/: __init__.py  base.py  epub_converter.py  pdf_converter.py
app/services/image/: __init__.py  aiohttp_downloader.py  base_downloader.py  base_processor.py  bs4_image_processor.py
app/static/assets/: robots.txt  sitemap.xml
app/static/styles/: ebook.css
app/utils/: performance.py
app/view/: page.py
app/view/templates/: convert.html  index.html
